--- a/LibraryWeb/Library.Data/Library.Data.csproj
+++ b/LibraryWeb/Library.Data/Library.Data.csproj
@@ -37,4 +37,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.20" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
