Update work with covers of books Add No Image.png

--- a/LibraryWeb/Library.BL/Library.BL.csproj
+++ b/LibraryWeb/Library.BL/Library.BL.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Duende.IdentityServer" Version="6.3.10" />
     <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="7.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.1" />
