--- a/LibraryWeb/Library.Data/Context/appsettings.json
+++ b/LibraryWeb/Library.Data/Context/appsettings.json
@@ -14,5 +14,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=LibraryDB;Trusted_Connection=true;TrustServerCertificate=True;"
-  }
+  },
+
+  "BaseUrl": "https://localhost:7190"
 }
